# Embrapa_fastapi

./: .gitignore  Dockerfile  Insomnia_2024-04-08.json  Insomnia_2024-04-22.json  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  mkdocs.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 827266b03d47_create_tables.py
docs/: build.md  documentacao.md  endpoints.md  index.md
embrapa/: Insomnia_2024-04-03.json  __init__.py  app.py  config.py  database.py
embrapa/import_embrapa/: df_comer_processed.csv  import_embrapa.py
embrapa/models/: auth.py  comercializacaoModel.py  exportacaoModel.py  importacaoModel.py  processamentoModel.py  producaoModel.py
embrapa/repository/: authRepository.py  comercializacaoRepository.py  exportacaoRepository.py  importacaoRepository.py  processamentoRepository.py  producaoRepository.py
embrapa/routers/: apis.py  auth.py  import_csv.py
embrapa/schemas/: auth.py  comercializacao.py  exportacao.py  importacao.py  processamento.py  producao.py
